[tool.poetry]
name = "repl_python3_beta_LonelyMediumorchidTelephone"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
altair = "^4.1.0"
opencv-python = "^4.5.3"
pandas = "^1.3.1"
streamlit = "^0.85.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
